# J2VParser

./: .gitignore  .gitmodules  .lel  CMakeLists.txt  Doxyfile  LICENSE  LL1_conflict_test_grammar.txt  LL1_test_grammar.txt  LL_input.txt  LL_regex.txt  LR0_conflict_test_grammar.txt  LR0_grammar.txt  LR1_grammar.txt  LR_regex.txt  NFA.cpp  NFA.h  README.md  Regex.cpp  Regex.h  compiler.doxygen  cppreference-doxygen-web.tag.xml  grammar_regex.txt  input_file.txt  input_string.txt  main.cpp  main2.cpp  main3.cpp  main4.cpp  new.txt  prueba2.txt  regex_lr1.txt  test.txt
Saver/: grammar_array.cpp  grammar_array.h
app/: CMakeLists.txt  LALR_parser.cpp  LL1_parser.cpp  LR0_parser.cpp  LR1_parser.cpp  SLR1_parser.cpp
app/src/: LALR_parser.cpp  LL1_parser.cpp  LR0_parser.cpp  LR1_parser.cpp  SLR1_parser.cpp  main.cpp
config/: config.h
debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compiler  prueba2.txt  test_grammar  test_parser
docs/: CMakeLists.txt  mainpage.md
include/: CMakeLists.txt  DFA.h  NFA.h  Regex.h  buffer.h  common.h  error.h  misc.h
include/J2VParser/: buffer.h  error.h
include/J2VParser/analyzers/: lexical_analyzer.h  lexical_analyzer_f.h  lexical_analyzer_s.h
include/J2VParser/analyzers/automata/: automaton.h  dfa.h  nfa.h
include/J2VParser/analyzers/regex/: regex_parser.h  regex_scanner.h
include/J2VParser/automata/: dfa.h  nfa.h
include/J2VParser/parsers/: LALR.h  LL1.h  LR0.h  LR1.h  SLR1.h  botup_parser.h  conflict_man.h  items.h  parser.h
include/J2VParser/parsers/grammar/: grammar_array.h  grammar_parser.h  grammar_scanner.h
include/J2VParser/parsers/grammar_utils/: grammar_analyzer.h  grammar_array.h  grammar_parser.h
include/J2VParser/parsers/regex_utils/: regex_parser.h  regex_scanner.h
include/J2VParser/utils/: bimap.h  utils.h
include/analyzers/: lexical_analyzer.h  lexical_analyzer_f.h  lexical_analyzer_s.h
include/automata/: DFA.h  NFA.h  dfa.h  nfa.h
include/compiler/: Grammar_Scanner.h  LL1.h  macros.h  parser.h  regex_parser.h  regex_scanner.h  scanner.h
include/compiler/grammar_parser/: grammar_analyzer.h  grammar_array.h  grammar_parser.h
include/compiler/lexical_analyzer/: lexical_analyzer.h  lexical_analyzer_f.h  lexical_analyzer_s.h
include/compiler/parser_algorithms/: LL1.h
include/io/: buffer.h  common.h
include/parsers/grammar_utils/: grammar_analyzer.h  grammar_array.h  grammar_parser.h
include/parsers/parser_algorithms/: LALR.h  LL1.h  LR0.h  LR1.h  SLR1.h  conflict_man.h  parser.h
include/parsers/regex_utils/: regex_parser.h  regex_scanner.h
lib/: buffer.cpp  common.cpp  error.cpp
lib/analyzers/: lexical_analyzer_f.cpp  lexical_analyzer_s.cpp
lib/automata/: DFA.cpp  NFA.cpp  dfa.cpp  nfa.cpp
lib/compiler/: Grammar_Scanner.cpp  LL1.cpp  macros.cpp  parser.cpp  regex_parser.cpp  regex_scanner.cpp  scanner.cpp
lib/compiler/grammar_parser/: grammar_analyzer.cpp  grammar_array.cpp  grammar_parser.cpp
lib/compiler/lexical_analyzer/: lexical_analyzer_f.cpp  lexical_analyzer_s.cpp
lib/compiler/parser_algorithms/: LL1.cpp
lib/io/: buffer.cpp  common.cpp
lib/parsers/grammar_utils/: grammar_analyzer.cpp  grammar_array.cpp  grammar_parser.cpp
lib/parsers/parser_algorithms/: LALR.cpp  LL1.cpp  LR0.cpp  LR1.cpp  SLR1.cpp
lib/parsers/regex_utils/: regex_parser.cpp  regex_scanner.cpp
liblex_analizer/: CMakeLists.txt
liblex_analizer/include/: DFA.h  NFA.h  Parser.h  Regex.h
liblex_analizer/src/: DFA.cpp  NFA.cpp  Parser.cpp  Regex.cpp
liblex_analizer/test/: testlex_analyzer.cpp
resources/LL_Parser/: LL_regex.txt
resources/LR_Parser/: LR_regex.txt  LR_test_grammar.txt  regex.txt  regex_lr1.txt
src/: CMakeLists.txt  DFA.cpp  NFA.cpp  Regex.cpp  buffer.cpp  error.cpp  main.cpp
src/analyzers/: lexical_analyzer_f.cpp  lexical_analyzer_s.cpp
src/analyzers/automata/: dfa.cpp  nfa.cpp
src/analyzers/regex/: regex_parser.cpp  regex_scanner.cpp
src/automata/: dfa.cpp  nfa.cpp
src/parsers/: LALR.cpp  LL1.cpp  LR0.cpp  LR1.cpp  SLR1.cpp  items.cpp
src/parsers/grammar/: grammar_array.cpp  grammar_parser.cpp  grammar_scanner.cpp
src/parsers/grammar_utils/: grammar_analyzer.cpp  grammar_array.cpp  grammar_parser.cpp
src/parsers/parser_algorithms/: LALR.cpp  LL1.cpp  LR0.cpp  LR1.cpp  SLR1.cpp
src/parsers/regex_utils/: regex_parser.cpp  regex_scanner.cpp
test/: LR1_test.cpp  main.cpp  main2.cpp  main3.cpp
tests/: CMakeLists.txt  test_automata.cpp
